[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/arcadeBackground.png" type="Texture" id=1]
[ext_resource path="res://User Interfaces/screen3.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Monocraft.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 2 )

[node name="ArcadeBackground" type="Sprite" parent="."]
position = Vector2( 512, 304 )
scale = Vector2( 1.50588, 0.60475 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.5
margin_top = -121.5
margin_right = 90.5
margin_bottom = 29.5

[node name="CompButton" type="Button" parent="VBoxContainer"]
margin_right = 267.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
text = "Competitive"

[node name="CoopButton" type="Button" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 267.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
text = "Cooperative"

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 267.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 3 )
text = "Back"

[connection signal="pressed" from="VBoxContainer/CompButton" to="." method="_on_CompButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CoopButton" to="." method="_on_CoopButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
